Added: code of regex to know Valdi Name from User

--- a/pages/sample_form.html
+++ b/pages/sample_form.html
@@ -55,6 +55,16 @@
     </form>
     <script>
 
+        // checking valid Name by User
+        const text = document.querySelector('#test');
+        const textError = document.querySelector('.test-error');
+        text.addEventListner('input', function() {
+            let nameRegex = RegExp('^[A-Z]{1}[a-z]{2,}$');
+            if (nameRegex.test(text.value))
+                textError.textContent = "";
+            else textError.textContent = "Name is Incorrect";
+        });
+
         const salary = document.querySelector('#salary');
         const output = document.querySelector('.salary-output');
         output.textContent = salary.value;
