--- a/pages/sample_form.html
+++ b/pages/sample_form.html
@@ -75,6 +75,16 @@
             else emailError.textContent="Email is Incorrect";
          });
          
+         //check valid mobile number
+        const tel=document.querySelector("#tel");
+        const telError=document.querySelector(".tel-error");
+        tel.addEventListener('input',function(){
+            let telRegex=RegExp("^[0-9]{2}\\s[6-9]{1}[0-9]{9}$");
+            if(telRegex.test(tel.value))
+                telError.textContent="";
+            else telError.textContent="Mobile Number is invalid"
+        });
+
         const salary = document.querySelector('#salary');
         const output = document.querySelector('.salary-output');
         output.textContent = salary.value;
